--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,32 @@
   box-sizing: border-box;
   font-family: 'Gilroy', sans-serif;
 }
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+.background-container {
+  position: relative; /* Create a positioning context for the pseudo-element */
+  overflow: hidden; /* Ensure the pseudo-element doesn’t overflow */
+}
+
+.background-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/assets/home/noise.png');
+  background-color: linear-gradient(128deg, rgba(255, 255, 255, 0.12) 3.07%, rgba(255, 255, 255, 0.03) 96.39%);
+  box-shadow: 0px 1px 24px -1px rgba(0, 0, 0, 0.25);
+  background-blend-mode: overlay;
+  opacity: 0.2;
+}
+
+.content {
+  position: relative; /* Ensure content stays above the pseudo-element */
+  z-index: 1;
+}
