Update next to latest version

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('/fonts/gilroy/gilroy.css');
+@import url('../../public/fonts/gilroy/gilroy.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
